@@ -2,13 +2,15 @@
 # Changes of OTRS 
 # Copyright (C) 2002-2003 Martin Edenhofer <martin+code@otrs.org>
 # --
-# $Id: CHANGES,v 1.77 2003/04/24 20:06:05 martin Exp $
+# $Id: CHANGES,v 1.78 2003/04/24 20:13:08 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see 
 # the enclosed file COPYING for license information (GPL). If you 
 # did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
 # --
 1.1 RC1 (2003-04-24)
+ - (2003/04/24) added refresh time to AgentMailbox screen (refresh 
+    time still exists for QueueView) 
  - (2003/04/24) fixed "show closed tickets" in customer interface
     (http://lists.otrs.org/pipermail/otrs/2003-April/001508.html)
  - (2003/04/24) fixed max shown tickets in QueueView (default now 1200)
